--- a/fsd 19-9-25.html
+++ b/fsd 19-9-25.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="html head">
     <meta name="keywords" content="html,css,js">
-    <meta http-equiv="refresh" content="5, url=http://www.amazon.com">
+    <meta http-equiv="refresh" content=5>
     <meta name="author" content="sds">
     <title>Dwarkesh</title>
     <link rel="icon" href="D:\images.jpg" type="image/jpg" size="16*16">
@@ -26,6 +26,45 @@
     <h4> heading 1</h4>
     <h5> heading 1</h5>
     <h6> heading 1</h6>
+    <div style="background-color:cyan"> Blocklevel
+    </div>
+    <span style="background-color:limegreen"> Full</span>
+    <span style="background-color:limegreen"> stack</span>
+    <span style="background-color:limegreen"> devlopment</span>
+    <p>
+        this is paragraph
+    </p>
+
+    <pre>
+        this   is  preformted
+    </pre>
+    abc <br> pqr
+
+    <hr size="5" color="red">
+
+    <!-- text formating -->
+    <div>
+        <b>
+            this is bold
+        </b>
+        <i>
+            this is italic
+        </i>
+        <u>
+            this price is
+        </u>
+        <ins>
+            4500rs
+        </ins>
+        <mark>
+            highlighted text
+        </mark>
+        h<sub>2</sub>o
+    </div><br />
+    10<sup>x+1</sup><br />
+    <abbr title="full stack devlopment">FSD</abbr>
+    </div>
+
 </body>
 
 </html>
