--- a/26-09-25.html
+++ b/26-09-25.html
@@ -1,1 +1,24 @@
 ## full stack devlopment
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML FORM</title>
+</head>
+
+<body>
+  
+          <form action="#" method="get">
+            <fieldset>
+            <legend>login page</legend>
+            <input type="text" name="uname" placeholder="enter user name">name<br/>
+            <input type="email" name="eid" >email<br/>
+            <input type="password" name="pwd">password<br>
+            <input type="number" name="num" min="0" max="100" step="5">number<br>
+            <input type="tel" name="num2">number2<br>
+            <input type="submit"><input type="reset">
+            </fieldset>
+          </form>
+</body>
+</html>
