--- a/26-09-25.html
+++ b/26-09-25.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <form action="#" method="get">
+    <form action="https://github.com/dwarkesh777/python-html/blob/main/26-09-25.html" method="get">
         <fieldset>
             <legend>login page</legend>
             <input type="text" name="uname" placeholder="enter user name" required maxlength="10"
@@ -19,7 +19,15 @@
             <input type="password" name="pwd">password<br>
             <input type="number" name="num" min="0" max="100" step="5">number<br>
             <input type="tel" name="num2">number2<br>
+            <input type="color"><br>
+            <input type="date">date<br>
+            <input type="datetime"><br>
+            <input type="checkbox">abc <input type="checkbox"> d<input type="checkbox">e<input type="checkbox">f<input
+                type="checkbox">g<br>
+            <input type="radio" name="r1" value="male">male
+            <input type="radio" name="r1" value="female">female
             <input type="submit"><input type="reset">
+
         </fieldset>
     </form>
 </body>
