--- a/26-09-25.html
+++ b/26-09-25.html
@@ -1,4 +1,5 @@
 ## full stack devlopment
+#method:1 get
 <!DOCTYPE html>
 <html lang="en">
 
@@ -26,6 +27,44 @@
                 type="checkbox">g<br>
             <input type="radio" name="r1" value="male">male
             <input type="radio" name="r1" value="female">female
+            <input type="submit"><input type="reset">
+
+        </fieldset>
+    </form>
+</body>
+
+</html>
+
+method:2post
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML FORM</title>
+</head>
+
+<body>
+
+    <form action="https://github.com/dwarkesh777/python-html/blob/main/26-09-25.html" method="post"
+        style="background-color: rgba(101, 165, 42, 0.445);">
+        <fieldset>
+            <legend style="text-align: center;">login page</legend>
+            <input type="text" name="uname" placeholder="enter user name" maxlength="10" minlength="0">name<br />
+            <input type="email" name="eid">email<br />
+            <input type="password" name="pwd">password<br>
+            <input type="number" name="num" min="0" max="100" step="5">number<br>
+            <input type="tel" name="num2">number2<br>
+            <input type="color" name="col">select color<br>
+            <input type="date">birthdate<br>
+            <input type="range" min="0" max="10"><br>
+            <input type="file" name="f1" accept=".jpg,.pdf" multiple> attach <br>
+            <input type="checkbox">a <input type="checkbox">d<input type="checkbox">e<input type="checkbox">f<input
+                type="checkbox">g<br>
+            <input type="radio" name="r1" value="male">male
+            <input type="radio" name="r1" value="female" checked>female<br>
+            <input type="search"> search <br>
             <input type="submit"><input type="reset">
 
         </fieldset>
