--- a/26-09-25.html
+++ b/26-09-25.html
@@ -66,6 +66,12 @@ method:2post
             <input type="radio" name="r1" value="female" checked>female<br>
             <input type="search"> search <br>
             <input type="submit"><input type="reset">
+            <input list="browsers" name="browser" value="enter city name">
+            <datalist id="browsers" >
+                <option value="chorme">
+                <option value="internet">
+                <option value="chormebook">
+            </datalist>
 
         </fieldset>
     </form>
