--- a/26-09-25.html
+++ b/26-09-25.html
@@ -75,8 +75,10 @@ method:2post
             #hidden,readonly,diasabled use any type
             <input type="text" name="r1" value="ro" readonly>readonly<br>
             <input type="text" name="d1" value="da" disabled>disabled<br>
-            <textarea rows="10" cols="10">address</textarea>
-            <!-- rows and cols not complasury -->
+            <textarea rows="10" cols="10">address</textarea><br>
+            <!-- rows and cols not complasury --><br>
+            <input type="text" autofocus>name<br>
+            <input type="text" autocomplete>autocomplete<br>
             <input type="submit"><input type="reset">
         </fieldset>
     </form>
