--- a/FSD/T2/selector.html
+++ b/FSD/T2/selector.html
@@ -18,3 +18,29 @@
     <h id="a">heading</h>
  </body>
  </html>
+<!-- <2>class selector
+ to target multiple element ,# never starat with digit -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .a {
+            color: aqua;
+        }
+     .b{background-color:white}
+    </style>
+</head>
+
+<body>
+    <p>
+        para without id
+    </p>
+    <p class="a b">para id</p>
+    <h class="a">heading</h>
+</body>
+
+</html>
