--- a/FSD/T2/selector.html
+++ b/FSD/T2/selector.html
@@ -44,3 +44,28 @@
 </body>
 
 </html>
+<!-- <3>universal selector
+ to target unique element ,# never starat with digit -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        * {
+            color: aqua;
+        }
+    </style>
+</head>
+
+<body>
+    <p>
+        para without id
+    </p>
+    <p>para id</p>
+    <h>heading</h>
+</body>
+
+</html>
