--- a/FSD/T2/selector.html
+++ b/FSD/T2/selector.html
@@ -69,3 +69,29 @@
 </body>
 
 </html>
+<!-- <4>descandant selector -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        ul b {
+            color: blueviolet;
+        }
+    </style>
+</head>
+
+<body>
+    <ul>
+        <li><b>abc</b></li>
+        <li>pgr</li>
+        <li><b><i>def</i></b></li>
+        <b>xyz</b>
+    </ul>
+    <b>bold</b>
+</body>
+
+</html>
