--- a/FSD/T2/selector.html
+++ b/FSD/T2/selector.html
@@ -95,3 +95,20 @@
 </body>
 
 </html>
+<!-- <5>child selector -->
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <style>
+            p>span{color: brown;}
+        </style>
+    </head>
+    <body>
+        <p>abc<span>par</span></p>
+        <p><span>hello</span></p>
+        <p>abc<i><span>hi</span></i></p>
+    </body>
+    </html>
