--- a/FSD/T2/selector.html
+++ b/FSD/T2/selector.html
@@ -112,3 +112,20 @@
         <p>abc<i><span>hi</span></i></p>
     </body>
     </html>
+<!-- <6>group selector -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        #a,p.h1{color:blue}
+    </style>
+</head>
+<body>
+    <p>para</p>
+    <h1>hii</h1>
+</body>
+</html>
+
