Add new HTML structure with form and styles

--- a/FSD/T2/selector.html
+++ b/FSD/T2/selector.html
@@ -129,3 +129,22 @@
 </body>
 </html>
 
+<!-- <7>attribute selector -->
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <style>
+            input[type="text"]{background-color: aquamarine;}
+            input[type="button"]{background-color: blue;}
+        </style>
+    </head>
+    <body>
+        <form method="get">
+            <input type="text">username<br>
+            <input type="button" value="submit">
+        </form>
+    </body>
+    </html>
