--- a/FSD/T2/abc.html
+++ b/FSD/T2/abc.html
@@ -61,11 +61,29 @@
         input {
             background-color: aqua;
         }
+
+        .container {
+            display: flex;
+            flex-direction: row;
+            justify-content: stretch;
+            align-items: center;
+            flex-wrap: wrap ;
+            gap: 15px;
+            background: lightgray;
+            padding: 15px;
+        }
+
+        .inn {
+            background: steelblue;
+            color: white;
+            padding: 20px;
+            width: 200px;
+        }
     </style>
 </head>
 
 <body>
-    <input type="text">
+
     <hr>
     <p class="a">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus voluptatibus eaque minima consectetur
         assumenda necessitatibus neque officia incidunt dolor aperiam ex ullam aut, voluptatem laborum! Id, laudantium
@@ -80,20 +98,24 @@
         molestiae consectetur reiciendis, laborum illum quam quos tempora, eveniet exercitationem. Ipsum placeat magni
         molestias ex repudiandae consectetur!</p>
     <hr>
-    <div class="box1">content box Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolorem, quo
-        dignissimos optio, ipsa dolores sunt porro suscipit laboriosam aliquam saepe blanditiis nam consequuntur? Nobis
-        inventore vero hic assumenda incidunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid sequi
-        placeat id ut mollitia sint quibusdam quaerat deserunt voluptate laboriosam. Reprehenderit officia soluta
-        necessitatibus eos distinctio aut quis, ipsa molestias! loren
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis in ipsa ex quam necessitatibus alias consectetur
-        repellat magnam! Expedita recusandae eaque voluptates sed dicta deleniti repellendus omnis nihil quo unde?lo
+
+    <div class="container">
+        <div class="inn">123456</div>
+        <div class="inn">1234514256</div>
+        <div class="inn">123gerg456</div>
+        <div class="inn">123456</div>
+        <div class="inn">1234514256</div>
+        <div class="inn">123gerg456</div>
+        <div class="inn">123456</div>
+        <div class="inn">1234514256</div>
+        <div class="inn">123gerg456</div>
+        <div class="inn">123456</div>
+        <div class="inn">1234514256</div>
+        <div class="inn">123gerg456</div>
+        <div class="inn">123456</div>
+        <div class="inn">1234514256</div>
+        <div class="inn">123gerg456</div>
     </div>
-    <div class="box2">border box Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum cumque aperiam,
-        deserunt dolores odio maiores numquam, tempore neque nam mollitia consequatur at, minima officiis ipsum quaerat
-        natus accusamus error reiciendis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, repellendus!
-        Consequuntur eveniet dolore maiores, adipisci voluptatibus officiis perferendis illum. Nostrum quod ducimus eos
-        porro aut vero totam impedit voluptatum suscipit?</div>
-    <hr>
 </body>
 
 </html>
