--- a/FSD/T2/unit5.html
+++ b/FSD/T2/unit5.html
@@ -13,11 +13,19 @@
             width: 300px;
             padding: 5px;
         } */
-        img {
+        /* img {
             height: auto;
             max-width: 100%;
             max-height: 100%;
             opacity: 0.40;
+        } */
+                img {
+            height: 300px;
+            width: 300px;
+        }
+
+        img:hover {
+            transform: scaleX(-1);
         }
     </style>
 </head>
@@ -25,5 +33,6 @@
 <body>
     <img src="https://avatars.githubusercontent.com/u/175926715?s=400&u=3120031e9ae3b66e1814792ba36a5599a1d251bb&v=4">
 </body>
+
 
 </html>
