--- a/FSD/modal.html
+++ b/FSD/modal.html
@@ -18,7 +18,7 @@
         click
     </button>
     <div class="modal fade" id="em">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="text-danger">Title</h5>
@@ -27,12 +27,13 @@
                 <div class="modal-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores rerum sint
                     excepturi commodi ea at cupiditate repudiandae, quod inventore quisquam similique mollitia
                     laboriosam beatae nihil quis debitis assumenda ratione optio.S</div>
-            </div>
+            
             <div class="modal-footer">
-                <button class="btn btn-info" data-bs-dismiss="modal"> Cancle</button>
-                <button class="btn btn-info">Save</button>
+                <button class="btn btn-outline-primary" data-bs-dismiss="modal"> Cancle</button>
+                <button class="btn btn-outline-primary">Save</button>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
