--- a/FSD/a.html
+++ b/FSD/a.html
@@ -36,6 +36,49 @@
         }
     </script>
     <p id="op"></p>
+
+
+
+       <!-- Create a form with three fields:
+    product,price,discount and a Save button.
+    Requirements:
+    1. When the user clicks Save, store the entered values into localStorage.
+    2. After saving, display a message:Data saved in local storage!
+    3. Add another button Remove Discount that removes only the discount field from localStorage.
+    4. After removal, display the remaining data in the console.
+    -->
+    <form>
+        Product: <input type="text" id="product"><br>
+        Price: <input type="text" id="price"><br>
+        Discount: <input type="text" id="discount"><br>
+        <button type="button" onclick="saveData()">Save</button>        
+
+        <button type="button" onclick="removeDiscount()">Remove Discount</button>
+        <p id="message"></p>                                                
+        <script>
+            function saveData() {
+                let product = document.getElementById("product").value;
+                let price = document.getElementById("price").value;
+                let discount = document.getElementById("discount").value;
+
+                localStorage.setItem("product", product);
+                localStorage.setItem("price", price);
+                localStorage.setItem("discount", discount);
+
+                document.getElementById("message").innerText = "Data saved in local storage!";
+            }
+
+            function removeDiscount() {
+                localStorage.removeItem("discount");
+                // localStorage.removeItem("product");
+                // localStorage.removeItem("price");                    
+                console.log("Remaining Data in Local Storage:");
+                console.log("Product: " + localStorage.getItem("product"));
+                console.log("Price: " + localStorage.getItem("price"));
+            }
+        </script>
+    </form>
 </body>
+
 
 </html>
