--- a/FSD/a.html
+++ b/FSD/a.html
@@ -96,9 +96,32 @@
     </script>
 
 
-    
+        <script>
+        function fetchData() {
+            return new Promise((resolve, reject) => {
+                setTimeout(() => {
+                    let success = true; // Simulate success or failure
+                    if (success) {
+                        resolve("Data fetched successfully!");
+                    } else {
+                        reject("Failed to fetch data.");
+                    }
+                }, 2000);
+            });
+        }
+        async function displayData() {
+            try {
+                let result = await fetchData();
+                console.log(result);
+            } catch (error) {
+                console.log(error);
+            }
+        }
+        displayData();
+    </script>
 </body>
 
 
 </html>
+
 
