--- a/FSD/a.html
+++ b/FSD/a.html
@@ -144,10 +144,25 @@ Print the doubled result of each value. -->
 
         processNumbers();
     </script>
+
+
+    <button onclick="getjok()">get joke</button>
+<p id="joke"></p>
+    <script>
+         function getjok() {
+           fetch('https://official-joke-api.appspot.com/random_joke')
+             .then(response => response.json())
+             .then(data => {
+               document.getElementById('joke').innerText = data.setup + " - " + data.punchline;
+             })
+             .catch(error => console.error('Error fetching joke:', error));
+        }
+    </script>
 </body>
 
 
 </html>
+
 
 
 
