--- a/FSD/a.html
+++ b/FSD/a.html
@@ -196,10 +196,40 @@ Print the doubled result of each value. -->
         </script>
     </form>
 
+
+
+
+<!-- Create a simple web page that allows users to fetch and display a random dog image from an
+external API. The page should include:
+1. A heading that indicates the purpose of the page (e.g., "Random Dog Image").
+2. A button that, when clicked, sends a request to the Dog CEO API
+(https://dog.ceo/api/breeds/image/random) to fetch a random dog image.
+3. An image element that displays the fetched dog image dynamically when the user clicks the
+button.
+4. The solution should use JavaScript's fetch API and async/await syntax to handle the API
+request. -->
+
+    <h1>Random Dog Image</h1>
+    <button onclick="fetchDogImage()">Get Random Dog Image</button>
+    <br><br>
+    <img id="dogImage" src="" alt="Random Dog" width="300">
+
+    <script>
+        async function fetchDogImage() {
+            try {
+                let response = await fetch('https://dog.ceo/api/breeds/image/random');
+                let data = await response.json();
+                document.getElementById('dogImage').src = data.message;
+            } catch (error) {
+                console.error('Error fetching dog image:', error);
+            }
+        }
+    </script>
 </body>
 
 
 </html>
+
 
 
 
